# ldae-sims

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml  ingress.yaml  kubernetes.yaml
.sqlx/: query-159c86d287ddc1a4bb78af8ad0aacfecc37acda561be4bb843473e6ca463fee4.json  query-19f0581075e07a379c4114315a4894a7b1056761537219970b46403fe952e8f7.json  query-1f47ab7559464cb066ffec6301f1ecfc6fa866eec0fe2b9d62e6fc1a67d6ea12.json  query-221c2afbf968158ffdf5387561287c5162399d9f26aa3be28199aeceaf6da676.json  query-30ead9a7ca63440e03f4f0b8c777101a6089747ad4e5b094750b67840299dc7b.json  query-3544b37750cd5d64e54f83b89265c52564001339b86187f0fdccfdf0c2ce6fb7.json  query-3fd271d33db65d33523aad0b6a9c5c343ee22c4d1d2108852530b2e53e1bab6d.json  query-5c3decac1475b540b8ca80f0a4adf08e299eacb3b3d43b89bd856944e4395b22.json  query-5c767e38d4f2351ab7b77aee2b707f7e7f3f3e9adeb16c321dad7838513fb9c9.json  query-5d3a5b0d2218d2ab8beb4ea4d007c03b460560a27fd1ce753ae6301017c7f88a.json  query-7cc37cef3e7a96293d2893d5e1150d3d9d04fe77986a805dee73065e66e64d28.json  query-86de5cf84dcb429bc04352aa24297a88be4d63a43c726be261ba021dbd50dfba.json  query-8bfc2d2b3d8022e3952e6cca2edfc1d46958420000a81f776a867e46e168e709.json  query-8d62cc4b29d8ff2414773b25a0fd55cbf77e7baa67125c3288e11713e7879716.json  query-a12e55f68347d266738721946d06bfafe12534cf85299359786016be16b55970.json  query-bcb9c0568cda1bfa1ababcb5d7cb35b0fd2782692a58194eae358dddae8e67c7.json  query-d8d2a585b6bac82c25b7860f5bacca019e525caaa3408911d2734eeb34c10d63.json  (+1 more)
migrations/: 20240402085924_ldss-2-degrees-table-creation.up.sql  (+7 more)
(+23 files in other folders)
